--- a/code/Estatística.ipynb
+++ b/code/Estatística.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "# Importing necessary libraries for data manipulation, visualization, and mathematical operations\n",
+    "import pandas as pd  # pandas is a data manipulation and analysis library\n",
+    "import seaborn as sns  # seaborn is a data visualization library based on matplotlib\n",
+    "import numpy as np  # numpy is a library for the Python programming language, adding support for large, multi-dimensional arrays and matrices\n",
+    "import matplotlib.pyplot as plt  # matplotlib is a plotting library for the Python programming language and its numerical mathematics extension NumPyt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,20 +119,21 @@
        "4    2020.1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Abrindo base de dados\n",
+    "# Reading the CSV file into a pandas DataFrame\n",
     "df = pd.read_csv('df.csv')\n",
+    "# Displaying the first few rows of the DataFrame\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,18 +264,19 @@
        "max    2023.200000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generating descriptive statistics for each column in the DataFrame\n",
     "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,21 +301,24 @@
     }
    ],
    "source": [
+    "# Printing a concise summary of the DataFrame\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropping the 'Semestre' and 'Nome' columns from the DataFrame\n",
+    "# These columns are not relevant for random forests\n",
     "df = df.drop(['Semestre','Nome'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,22 +333,24 @@
     }
    ],
    "source": [
+    "# Setting the font scale and figure size for seaborn plots\n",
     "sns.set(font_scale=1.3,rc={'figure.figsize':(20,20)})\n",
+    "# Generating histograms for each column in the DataFrame\n",
     "eixo=df.hist(bins=20, color='red')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1e4eda739d0>"
+       "<seaborn.axisgrid.PairGrid at 0x2c6aeba8b80>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,12 +366,13 @@
     }
    ],
    "source": [
+    "# Generating a pair plot using seaborn, colored by the 'Evadido' column\n",
     "sns.pairplot(df,hue='Evadido')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +381,7 @@
        "<Axes: xlabel='Evadido', ylabel='Geometria_Analitica'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -388,13 +397,15 @@
     }
    ],
    "source": [
+    "# Setting the figure size for the subsequent seaborn box plot\n",
     "plt.figure(figsize=(10,5))\n",
+    "# Generating a box plot for the 'Geometria_Analitica' column, colored by the 'Evadido' column\n",
     "sns.boxplot(data=df,y='Geometria_Analitica',x='Evadido')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +414,7 @@
        "<Axes: xlabel='Evadido', ylabel='Calculo1'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +444,7 @@
        "<Axes: xlabel='Evadido', ylabel='Fisica1'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +474,7 @@
        "<Axes: xlabel='Evadido', ylabel='Calculo1'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -482,13 +493,6 @@
     "plt.figure(figsize=(10,5))\n",
     "sns.scatterplot(data=df,x='Evadido', y='Calculo1')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
